@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-17T00:55:57Z",
+  "timestamp" : "2022-06-17T08:15:12Z",
   "count_outdated" : 339,
   "uniques_outdated" : 182,
-  "count" : 369,
+  "count" : 368,
   "uniques" : 199,
   "clones" : [
     {
       "timestamp": "2022-06-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
