@@ -1,10 +1,10 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-06-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
